--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,12 @@ jobs:
         with:
           flutter-version: '2.2.0'
       - run: flutter pub get
-      - run: flutter build apk --debug --split-per-abi
+      - run: flutter build apk --release --no-sound-null-safety
       - name: Upload to gdrive
         uses: adityak74/google-drive-upload-git-action@main
         with:
           credentials: ${{ secrets.GOOGLE_DRIVE_CREDENTIALS }}
-          filename: "build/app/outputs/apk/release/app-release.apk"
+          filename: "build/app/outputs/flutter-apk/app-release.apk"
           folderId: "14RnuNB90_UYybkvy-PTGko9GJycL1miw"
           name: "documentation.zip" # optional string
           overwrite: "true" # optional boolean
