--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           flutter-version: '2.2.0'
       - run: flutter pub get
+      - run: flutter pub run build_runner build --delete-conflicting-outputs
       - uses: NiklasLehnfeld/flutter-android-build-action@v1
         id: android-build
         with:
