--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
+
+
 dependencies:
   flutter:
     sdk: flutter
@@ -28,6 +30,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  build_runner:
 
 dev_dependencies:
   flutter_test:
